// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NowApplicationDocumentSearchSplashScreen renders in loading state 1`] = `
<div>
  <div
    class="ant-row ant-row-center ant-row-middle"
  >
    <div
      class="ant-col ant-col-xs-24"
      style="max-width: 900px;"
    >
      <div
        class="ant-row"
        style="margin-top: -12px; margin-bottom: -12px;"
      >
        <div
          class="ant-col ant-col-xs-24"
          style="padding-top: 12px; padding-bottom: 12px; text-align: center;"
        >
          <h1
            class="ant-typography"
          >
            Search Application Documents
          </h1>
          <div
            class="ant-typography"
            style="font-size: 16px;"
          >
            Search across all documents submitted with this Notice of Work application and get AI-powered answers. Try searching for specific plans, assessments, or operational details.
          </div>
          <div
            class="ant-alert ant-alert-warning ant-alert-with-description"
            data-show="true"
            role="alert"
            style="margin-bottom: 16px;"
          >
            <span
              aria-label="exclamation-circle"
              class="anticon anticon-exclamation-circle ant-alert-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                />
              </svg>
            </span>
            <div
              class="ant-alert-content"
            >
              <div
                class="ant-alert-description"
              >
                Note: Spatial files (e.g. shapefiles) are not indexed and will not appear in search results.
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-search ant-input-search-large ant-input-search-with-button ant-input-group-wrapper-lg"
                      style="font-size: 16px; height: 50px; width: 400px;"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                        >
                          <input
                            class="ant-input ant-input-lg"
                            id="search"
                            placeholder="Search application documents..."
                            type="text"
                            value=""
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-clear-icon ant-input-clear-icon-hidden"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn ant-btn-primary ant-btn-lg ant-btn-loading ant-input-search-button"
                            type="button"
                          >
                            <span
                              class="ant-btn-loading-icon"
                            >
                              <span
                                aria-label="loading"
                                class="anticon anticon-loading anticon-spin"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="loading"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="0 0 1024 1024"
                                  width="1em"
                                >
                                  <path
                                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24"
          style="padding-top: 12px; padding-bottom: 12px; text-align: center; margin-top: 24px;"
        >
          <h4
            class="ant-typography"
            style="margin-bottom: 32px;"
          >
            Try these example searches
          </h4>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-top: -12px; margin-bottom: -12px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="aim"
                      class="anticon anticon-aim"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="aim"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <defs>
                          <style />
                        </defs>
                        <path
                          d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                        />
                        <path
                          d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Activities & Scope
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What is the timeline of the proposed activities?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What activities are planned (e.g. drilling, trenching)?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        How much land disturbance is proposed?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What approvals, permits or authorizations are identified or may be required?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Environment & Reclamation
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What environmental considerations are identified?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What reclamation activities are planned?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        How will water runoff be managed?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are any environmental management or monitoring plans included?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="audit"
                      class="anticon anticon-audit"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="audit"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Engagement
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What indigenous engagement has been completed or documented?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are there any identified cultural or heritage considerations?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="file-search"
                      class="anticon anticon-file-search"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="file-search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Operations
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What equipment and machinery are proposed for the work?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are there any high-risk activities (e.g. blasting) proposed?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NowApplicationDocumentSearchSplashScreen renders properly 1`] = `
<div>
  <div
    class="ant-row ant-row-center ant-row-middle"
  >
    <div
      class="ant-col ant-col-xs-24"
      style="max-width: 900px;"
    >
      <div
        class="ant-row"
        style="margin-top: -12px; margin-bottom: -12px;"
      >
        <div
          class="ant-col ant-col-xs-24"
          style="padding-top: 12px; padding-bottom: 12px; text-align: center;"
        >
          <h1
            class="ant-typography"
          >
            Search Application Documents
          </h1>
          <div
            class="ant-typography"
            style="font-size: 16px;"
          >
            Search across all documents submitted with this Notice of Work application and get AI-powered answers. Try searching for specific plans, assessments, or operational details.
          </div>
          <div
            class="ant-alert ant-alert-warning ant-alert-with-description"
            data-show="true"
            role="alert"
            style="margin-bottom: 16px;"
          >
            <span
              aria-label="exclamation-circle"
              class="anticon anticon-exclamation-circle ant-alert-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
                <path
                  d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
                />
              </svg>
            </span>
            <div
              class="ant-alert-content"
            >
              <div
                class="ant-alert-description"
              >
                Note: Spatial files (e.g. shapefiles) are not indexed and will not appear in search results.
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-group-wrapper ant-input-search ant-input-search-large ant-input-search-with-button ant-input-group-wrapper-lg"
                      style="font-size: 16px; height: 50px; width: 400px;"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                        >
                          <input
                            class="ant-input ant-input-lg"
                            id="search"
                            placeholder="Search application documents..."
                            type="text"
                            value=""
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-clear-icon ant-input-clear-icon-hidden"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          class="ant-input-group-addon"
                        >
                          <button
                            class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
                            type="button"
                          >
                            <span
                              aria-label="search"
                              class="anticon anticon-search"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="search"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24"
          style="padding-top: 12px; padding-bottom: 12px; text-align: center; margin-top: 24px;"
        >
          <h4
            class="ant-typography"
            style="margin-bottom: 32px;"
          >
            Try these example searches
          </h4>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-top: -12px; margin-bottom: -12px;"
      >
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="aim"
                      class="anticon anticon-aim"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="aim"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <defs>
                          <style />
                        </defs>
                        <path
                          d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"
                        />
                        <path
                          d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8A118.57 118.57 0 00512 392z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Activities & Scope
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What is the timeline of the proposed activities?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What activities are planned (e.g. drilling, trenching)?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        How much land disturbance is proposed?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What approvals, permits or authorizations are identified or may be required?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Environment & Reclamation
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What environmental considerations are identified?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What reclamation activities are planned?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        How will water runoff be managed?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are any environmental management or monitoring plans included?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="audit"
                      class="anticon anticon-audit"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="audit"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M296 250c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm184 144H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zm-48 458H208V148h560v320c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h264c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm440-88H728v-36.6c46.3-13.8 80-56.6 80-107.4 0-61.9-50.1-112-112-112s-112 50.1-112 112c0 50.7 33.7 93.6 80 107.4V764H520c-8.8 0-16 7.2-16 16v152c0 8.8 7.2 16 16 16h352c8.8 0 16-7.2 16-16V780c0-8.8-7.2-16-16-16zM646 620c0-27.6 22.4-50 50-50s50 22.4 50 50-22.4 50-50 50-50-22.4-50-50zm180 266H566v-60h260v60z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Engagement
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What indigenous engagement has been completed or documented?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are there any identified cultural or heritage considerations?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col ant-col-xs-24 ant-col-sm-12"
          style="margin-bottom: 24px; padding: 0px 20px;"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable"
            style="height: 100%;"
          >
            <div
              class="ant-card-body"
              style="height: 100%;"
            >
              <div
                class="ant-row"
                style="margin-top: -8px; margin-bottom: -8px;"
              >
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row ant-row-middle"
                    style="margin-left: -4px; margin-right: -4px;"
                  >
                    <span
                      aria-label="file-search"
                      class="anticon anticon-file-search"
                      role="img"
                      style="font-size: 24px;"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="file-search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M688 312v-48c0-4.4-3.6-8-8-8H296c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h384c4.4 0 8-3.6 8-8zm-392 88c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H296zm144 452H208V148h560v344c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V108c0-17.7-14.3-32-32-32H168c-17.7 0-32 14.3-32 32v784c0 17.7 14.3 32 32 32h272c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm445.7 51.5l-93.3-93.3C814.7 780.7 828 743.9 828 704c0-97.2-78.8-176-176-176s-176 78.8-176 176 78.8 176 176 176c35.8 0 69-10.7 96.8-29l94.7 94.7c1.6 1.6 3.6 2.3 5.6 2.3s4.1-.8 5.6-2.3l31-31a7.9 7.9 0 000-11.2zM652 816c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    <div
                      class="ant-col"
                      style="padding-left: 4px; padding-right: 4px;"
                    >
                      <span
                        class="ant-typography"
                      >
                        <strong>
                          Operations
                        </strong>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-col ant-col-xs-24"
                  style="padding-top: 8px; padding-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                    style="margin-top: -4px; margin-bottom: -4px;"
                  >
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        What equipment and machinery are proposed for the work?
                      </a>
                    </div>
                    <div
                      class="ant-col ant-col-xs-24"
                      style="padding-top: 4px; padding-bottom: 4px;"
                    >
                      <a
                        class="ant-typography permit-search__example-link"
                      >
                        Are there any high-risk activities (e.g. blasting) proposed?
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
